--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.2",
+    "classnames": "^2.3.1",
     "next": "12.1.0",
     "postcss": "^8.4.8",
     "query-string": "^7.1.1",
