--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "recoil": "^0.6.1",
-    "recoil-nexus": "^0.3.15",
+    "rooks": "^5.11.0",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
