--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "sass": "^1.50.0",
     "typescript": "4.6.2"
   }
 }
