--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@convex-dev/react": "^0.0.56",
-    "@convex-dev/server": "^0.0.56",
+    "@auth0/auth0-react": "^1.9.0",
+    "@convex-dev/react": "^0.0.67",
+    "@convex-dev/server": "^0.0.67",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.2",
@@ -25,7 +26,7 @@
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@convex-dev/cli": "^0.0.56",
+    "@convex-dev/cli": "^0.0.67",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
