--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
+    "md5": "^2.3.0",
     "next": "12.1.0",
     "postcss": "^8.4.8",
     "query-string": "^7.1.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@convex-dev/cli": "^0.0.67",
+    "@types/md5": "^2.3.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
