--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.8",
     "query-string": "^7.1.1",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
     "recoil": "^0.6.1",
     "rooks": "^5.11.0",
