--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "purge": "tsc --esModuleInterop --resolveJsonModule ./scripts/purge.ts && node ./scripts/purge.js"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
