--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
-    "convex-dev": "^0.0.71",
+    "convex-dev": "0.1.1",
     "md5": "^2.3.0",
     "next": "12.1.0",
     "postcss": "^8.4.8",
