--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "convex-dev": "0.1.1",
+    "esbuild": "^0.14.39",
     "md5": "^2.3.0",
     "next": "12.1.0",
     "postcss": "^8.4.8",
