--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
+    "convex": "^0.1.10",
     "convex-dev": "0.1.2",
     "esbuild": "^0.14.39",
     "md5": "^2.3.0",
