--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "17.0.2",
     "recoil": "^0.6.1",
     "rooks": "^5.11.0",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/md5": "^2.3.2",
