--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@types/md5": "^2.3.2",
-    "@types/node": "17.0.21",
+    "@types/node": "^18.16.1",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "sass": "^1.50.0",
-    "typescript": "4.6.2"
+    "typescript": "^5.0.4"
   }
 }
