--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
-    "convex": "^0.13.0",
+    "convex": "^1.3.1",
     "esbuild": "^0.14.39",
     "md5": "^2.3.0",
     "next": "12.1.0",
@@ -33,6 +33,8 @@
     "@types/md5": "^2.3.2",
     "@types/node": "^18.16.1",
     "@types/react": "17.0.39",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "sass": "^1.50.0",
